feat: created tests
