# apps/api/src/models/model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  api.yaml
-#   timestamp: 2026-01-29T19:49:17+00:00
+#   timestamp: 2026-01-29T20:46:48+00:00
 
 from __future__ import annotations
 
@@ -79,19 +79,29 @@ class TransactionBase(BaseModel):
     )
 
 
+class CreateTransactionBase(BaseModel):
+    occurred_at: date_aliased = Field(..., examples=['2024-06-01'])
+    amount: TransactionAmount
+    notes: Optional[str] = Field(None, examples=['makeup'])
+    recurring_template_id: Optional[UID] = Field(
+        None,
+        description='ID of recurring template if this transaction was created from one',
+    )
+
+
 class TransactionMeta(BaseModel):
     id: UID
     created_at: AwareDatetime = Field(..., examples=['2024-06-01T13:45:00Z'])
 
 
-class CreateExpenseTransactionPayload(TransactionBase):
+class CreateExpenseTransactionPayload(CreateTransactionBase):
     type: Literal['expense'] = Field(..., examples=['expense'])
     transaction_tag: str = Field(..., examples=['want'])
     expense_category_id: str = Field(..., examples=['personal'])
     expense_subcategory_id: Optional[str] = Field(None, examples=['beauty_care'])
 
 
-class CreateIncomeTransactionPayload(TransactionBase):
+class CreateIncomeTransactionPayload(CreateTransactionBase):
     type: Literal['income'] = Field(..., examples=['income'])
     income_category_id: str = Field(..., examples=['salary'])
 
